# arma3_tool

./: .gitattributes  .gitignore  CLEANUP_PRD.md  CLI_USAGE.md  Cargo.toml  PBO_EXTRACTION_IMPLEMENTATION_SUMMARY.md  PHASE2_BINARY_CONFIG_IMPLEMENTATION.md  PRD_PBO_EXTRACTION_REIMPLEMENTATION.md  PR_REVIEW_SUMMARY.md  TYPE_ANALYSIS.md  UNIFIED_TYPES_DESIGN.md  arma3_tool.code-workspace  audit_system.sh  full_scan_config.json  item_filter_config.json  performance_validation.md  readme.md  run  run_all.bat  run_extract.bat  run_full_scan.bat  run_generate_reports.bat  run_process.bat  run_report.bat  run_report_compare.bat  run_report_fuzzy.bat  run_scan_game_data.bat  run_scan_missions.bat  run_ui.bat  run_web.bat  scan_config.json  scan_config_pca.json  scan_config_pcanext.json  ui_settings.json  workflow_integration_audit.md
.ai/: TASKMASTER.md
arma3_db/: Cargo.toml  README.md
arma3_db/src/: lib.rs  schema.rs
arma3_db/src/models/: cache.rs  class.rs  mission.rs  mod.rs  pbo.rs
arma3_db/src/queries/: cache.rs  class_repository.rs  graph_query_engine.rs  mission_repository.rs  mod.rs  pbo_repository.rs
arma3_db/src/repos/: class_repository.rs
cache_storage/: Cargo.toml
cache_storage/src/: lib.rs
crates/apps/reporter/: Cargo.toml
crates/apps/scanner-tools/: Cargo.toml
crates/apps/tools/: Cargo.toml
crates/apps/tools/quick_extract/: Cargo.toml
crates/apps/tools/src/: args.rs  extraction.rs  file_ops.rs  lib.rs  main.rs
crates/infra/config/: Cargo.toml
crates/infra/config/src/: error.rs  scan.rs  visualization.rs
crates/infra/database/: Cargo.toml  README.trim_analysis.md
crates/infra/database/database/: README.class_mapping.md  README.export.md
crates/infra/database/src/: error.rs
crates/infra/database/tests/: export_csv_test.rs
crates/infra/extract/: Cargo.toml  PHASE2_IMPLEMENTATION.md
crates/infra/extract/examples/: basic_usage.rs  binary_conversion.rs
crates/infra/extract/src/: file_db.rs  lib.rs  pbo_interface.rs  processor.rs
crates/infra/extract/tests/: edge_cases.rs  integration_tests.rs
crates/infra/pbo/: Cargo.toml
crates/infra/pbo/pbo_tools/: Cargo.toml
crates/infra/pbo/tests/: binary_handling.rs  edge_cases.rs  error_handling.rs  pbo_config_integration.rs  pbo_operations.rs
crates/main/cli/: Cargo.toml
crates/main/cli/src/: main.rs
crates/parsers/hpp/: Cargo.toml
crates/parsers/hpp/benches/: query_benchmarks.rs
crates/parsers/hpp/parser_hpp/: README.md
crates/parsers/hpp/src/: ast_transformer.rs  common_parser.rs  error.rs  lib.rs  models.rs  query.rs  simple_parser.rs  workspace_manager.rs
crates/parsers/hpp/tests/: integration_validation.rs  loadout_test.rs  rscprogress_test.rs
crates/parsers/sqf/: Cargo.toml
crates/parsers/sqf/benches/: sqf_parser_benchmarks.rs
crates/parsers/sqf/parser_sqf/: Cargo.toml
crates/parsers/sqf/src/: common_parser.rs  lib.rs
crates/parsers/sqm/: Cargo.toml  README.md
crates/parsers/sqm/parser_sqm/: Cargo.toml
crates/parsers/sqm/src/: common_parser.rs  lib.rs
crates/parsers/sqm/tests/: tests.rs
crates/services/scan-gamedata/: Cargo.toml  hemtt.toml
crates/services/scan-gamedata/examples/: scan_directory.rs
crates/services/scan-mission/: Cargo.toml
crates/services/scan-weapons/: .gitignore  Cargo.toml  config_pcanext.yaml
database/: Cargo.toml  README.export.md  README.md  README.trim_analysis.md  test_csv_export.cmd
database/benches/: query_bench.rs
database/src/: error.rs  lib.rs  manager.rs  schema.rs
database/src/analysis/: class_mapping_analysis.rs  mod.rs  trim_analysis.rs
database/src/models/: cache.rs  class.rs  mission.rs
database/src/queries/: cache.rs  class_repository.rs  graph_query_engine.rs  mission_repository.rs
database/src/repos/: class_repository.rs
database/tests/: export_csv_test.rs  storage_manager_tests.rs  trim_analysis_test.rs
database_server/: Cargo.toml  todo
database_server/cache/: arma3.db
database_server/data/: database.db
database_server/src/: main.rs  models.rs  websocket.rs
database_server/src/handlers/: mod.rs  websocket.rs
database_server/src/models/: graph.rs  mod.rs  websocket.rs
database_server/src/services/: graph_generator.rs  mod.rs
dependency_scanner/: Cargo.toml
dependency_scanner/src/: lib.rs
libs/config/: Cargo.toml
libs/config/src/: builder.rs  item_filter.rs  lib.rs  scan.rs  validation.rs
libs/parser_hpp/: Cargo.toml
libs/parser_hpp/benches/: query_benchmarks.rs
libs/parser_hpp/src/: ast_transformer.rs  file_processor.rs  lib.rs  models.rs  simple_parser.rs
libs/parser_hpp/tests/: integration_validation.rs  loadout_test.rs
libs/pbo_extractor/: Cargo.toml
libs/pbo_extractor/examples/: basic_usage.rs
libs/pbo_extractor/src/: file_db.rs  processor.rs
libs/pbo_extractor/tests/: integration_tests.rs
libs/reporter/: Cargo.toml
libs/reporter/src/: analyzers.rs  class_graph.rs  coordinator.rs  writers.rs
libs/scanner_mission/: Cargo.toml  test_mission.rs
libs/scanner_mission/benches/: mission_scanner_benchmarks.rs
libs/sqf-analyzer/: Cargo.toml
libs/sqf-analyzer/benches/: benchmark.rs
libs/sqf-analyzer/src/: lib.rs
libs/sqf-analyzer/test-files/: arsenal_simple.sqf  fn_assignGearCurated.sqf
libs/sqf-analyzer/tests/: integration_test.rs
libs/weapon_magazine_scanner/: Cargo.toml  README.md  config_pca.yaml  sample_config.yaml
libs/weapon_magazine_scanner/src/: config.rs
libs/weapon_magazine_scanner/tests/: unit_tests.rs
libs/workflow/: Cargo.toml
libs/workflow/src/: export.rs  extract.rs  lib.rs  orchestrator.rs  process.rs  report.rs
pbo_cache/: Cargo.toml  test_extraction.rs
pbo_cache/examples/: advanced_usage.rs  basic_usage.rs
pbo_cache/src/: db_manager.rs  error.rs  index.rs  lib.rs  manager.rs  models.rs  processor.rs  scanner.rs  utils.rs
pbo_cache/tests/: integration_tests.rs
report_writer/: Cargo.toml
report_writer/src/: error.rs  lib.rs
report_writer/src/reports/: comparison.rs  dependency.rs  fuzzy_search.rs  graph.rs  mod.rs
report_writer/src/utils/: file.rs  mission_dependency_builder.rs  mod.rs  table.rs
(+442 files in other folders)
