[package]
name = "arma3-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
arma3_database = { workspace = true }
arma3_extractor = { workspace = true }
arma3_models = { workspace = true }

gamedata_scanner = { path = "../gamedata_scanner" }
mission_scanner = { path = "../mission_scanner" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
rusqlite = { workspace = true }
strsim = { workspace = true }
rayon = { workspace = true } # Added for parallel processing
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"

[workspace]
members = [
    "models",
    "extractor",
    "database",
]

[[bin]]
name = "arma3tool_cli"
path = "src/bin/arma3tool_cli.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[workspace.dependencies]
# Internal crates
arma3_models = { path = "./models" }
arma3_database = { path = "./database" }
arma3_extractor = { path = "./extractor" }
arma3_reporter = { path = "./reporter" }
pbo_tools = { path = "../pbo_tools" }

# External dependencies
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
dashmap = "6.1.0"
directories = "5.0.1"
env_logger = "0.11.7"
log = "0.4.27"
num_cpus = "1.16.0"
petgraph = "0.7.1"
prettytable-rs = "0.10.0"
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.27"
strsim = "0.11.1"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
walkdir = "2.5.0"
actix-web = "4.0"
actix-files = "0.6"
rusqlite = "0.34.0"

[workspace.lints.rust]
dead_code = "deny"
unused_parens = "allow"
unused_imports = "deny"
unused_variables = "allow"
unused_mut = "allow"

# [profile.release]
# lto = true
# strip = true
# incremental = false
# panic = "abort"
