[package]
name = "arma3-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
arma3_database = { workspace = true }
arma3_extractor = { workspace = true }
arma3_models = { workspace = true }

gamedata_scanner = { workspace = true }
mission_scanner = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
strsim = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[workspace]
members = [
    "libs/database",
    "libs/models",
    "libs/parser_hpp",
    "libs/parser_sqf",
    "libs/parser_sqm",
    "libs/pbo_extractor",
    "libs/pbo_tools",
    "libs/quick_extract",
    "libs/reporter",
    "libs/scanner_gamedata",
    "libs/scanner_gamedata/models",
    "libs/scanner_gamedata/parser_advanced",
    "libs/scanner_gamedata/parser_simple",
    "libs/scanner_gamedata/tool",
    "libs/scanner_mission",
    "libs/sqf-analyzer",
    "libs/weapon_magazine_scanner",
]

[[bin]]
name = "arma3tool_cli"
path = "src/bin/arma3tool_cli.rs"

[[bin]]
name = "export_performance"
path = "benches/export_performance.rs"

[[bin]]
name = "export_comparison"
path = "benches/export_comparison.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[workspace.dependencies]
# Internal crates
arma3_models = { path = "libs/models" }
arma3_database = { path = "libs/database" }
arma3_extractor = { path = "libs/pbo_extractor" }
arma3_reporter = { path = "libs/reporter" }
pbo_tools = { path = "libs/pbo_tools" }
gamedata_scanner = { path = "libs/scanner_gamedata" }
gamedata_scanner_models = { path = "libs/scanner_gamedata/models" }
parser_advanced = { path = "libs/scanner_gamedata/parser_advanced" }
parser_simple = { path = "libs/scanner_gamedata/parser_simple" }
mission_scanner = { path = "libs/scanner_mission" }
parser_hpp = { path = "libs/parser_hpp" }
parser_sqf = { path = "libs/parser_sqf" }
parser_sqm = { path = "libs/parser_sqm" }
sqf-analyzer = { path = "libs/sqf-analyzer" }
hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-sqf = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-sqm = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }

# External dependencies
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
criterion = "0.6.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
dashmap = "6.1.0"
directories = "5.0.1"
env_logger = "0.11.7"
fs_extra = "1.3.0"
indicatif = "0.17.12"
log = "0.4.27"
lz4_flex = "0.11.5"
memchr = "2.7.5"
notify = "8.0.0"
num_cpus = "1.16.0"
path-clean = "1.0.1"
petgraph = "0.7.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
rmp-serde = "1.3.0"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono", "functions"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
strsim = "0.11.1"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[workspace.lints.rust]
dead_code = "deny"
unused_parens = "allow"
unused_imports = "deny"
unused_variables = "allow"
unused_mut = "allow"

# [profile.release]
# lto = true
# strip = true
# incremental = false
# panic = "abort"
