[package]
name = "arma3-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
arma3-config = { workspace = true }
arma3-database = { workspace = true }
arma3-extract = { workspace = true }
arma3-types = { workspace = true }
arma3-reporter = { workspace = true }
arma3-workflow = { workspace = true }

arma3-scan-gamedata = { workspace = true }
arma3-scan-mission = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
strsim = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }

[workspace]
members = [
    # Core layer
    "crates/core/types",
    "crates/core/gamedata-models",
    "crates/core/errors",
    "crates/core/common",
    
    # Parser layer
    "crates/parsers/common",
    "crates/parsers/hpp",
    "crates/parsers/sqf",
    "crates/parsers/sqm",
    
    # Infrastructure layer
    "crates/infra/config",
    "crates/infra/database",
    "crates/infra/extract",
    "crates/infra/pbo",
    
    # Service layer
    "crates/services/scan-gamedata",
    "crates/services/scan-mission",
    "crates/services/scan-weapons",
    "crates/services/analyze",
    
    # Application layer
    "crates/apps/workflow",
    "crates/apps/reporter",
    "crates/apps/tools",
    "crates/apps/scanner-tools",
    
    # Main CLI
    "crates/main/cli",
]

[[bin]]
name = "arma3tool_cli"
path = "src/bin/arma3tool_cli.rs"

[[bench]]
name = "export_performance"
harness = false

[[bench]]
name = "export_comparison"
harness = false

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[workspace.dependencies]
# Internal crates - Core layer
arma3-types = { path = "crates/core/types" }
arma3-gamedata-models = { path = "crates/core/gamedata-models" }
arma3-errors = { path = "crates/core/errors" }
arma3-common = { path = "crates/core/common" }

# Internal crates - Parser layer
arma3-parser-common = { path = "crates/parsers/common" }
arma3-parser-hpp = { path = "crates/parsers/hpp" }
arma3-parser-sqf = { path = "crates/parsers/sqf" }
arma3-parser-sqm = { path = "crates/parsers/sqm" }

# Internal crates - Infrastructure layer
arma3-config = { path = "crates/infra/config" }
arma3-database = { path = "crates/infra/database" }
arma3-extract = { path = "crates/infra/extract" }
arma3-pbo = { path = "crates/infra/pbo" }

# Internal crates - Service layer
arma3-scan-gamedata = { path = "crates/services/scan-gamedata" }
arma3-scan-mission = { path = "crates/services/scan-mission" }
arma3-scan-weapons = { path = "crates/services/scan-weapons" }
arma3-analyze = { path = "crates/services/analyze" }

# Internal crates - Application layer
arma3-workflow = { path = "crates/apps/workflow" }
arma3-reporter = { path = "crates/apps/reporter" }
arma3-tools = { path = "crates/apps/tools" }
arma3-scanner-tools = { path = "crates/apps/scanner-tools" }

# Main CLI
arma3-cli = { path = "crates/main/cli" }

hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-pbo = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-sqf = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
hemtt-sqm = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }

# External dependencies
anyhow = "1.0.97"
async-trait = "0.1.84"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
criterion = "0.6.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
dashmap = "6.1.0"
directories = "5.0.1"
env_logger = "0.11.7"
futures = "0.3.31"
fs_extra = "1.3.0"
indicatif = "0.17.8"
log = "0.4.27"
lz4_flex = "0.11.5"
memchr = "2.7.5"
notify = "8.0.0"
num_cpus = "1.16.0"
path-clean = "1.0.1"
petgraph = "0.7.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
rmp-serde = "1.3.0"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono", "functions"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
strsim = "0.11.1"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.23"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
walkdir = "2.5.0"

[workspace.lints.rust]
dead_code = "deny"
unused_parens = "allow"
unused_imports = "deny"
unused_variables = "allow"
unused_mut = "allow"
