[package]
name = "arma3_db"
version = "0.1.0"
edition = "2021"
description = "SQLite database integration for Arma 3 Tool"

[dependencies]
arma3_tool_shared_models = { path = "../shared_models" }

anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
log = "0.4.27"
petgraph = "0.7.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono", "functions"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt", "sync", "macros"] }

[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt", "macros", "test-util"] }
pretty_assertions = "1.4.1"
env_logger = "0.11.7" 