[package]
name = "arma3_database"
version.workspace = true
edition.workspace = true
description = "SQLite database integration for Arma 3 Tool"

[dependencies]
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono", "functions"] }
rayon = "1.10.0"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
notify = { version = "8.0.0", optional = true }
fancy-regex = "0.12.0"
csv = "1.3.0"

arma3_models = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.19.1"
criterion = "0.5.1"
rand = "0.9.0"
fake = { version = "4.3.0", features = ["derive"] }

[features]
default = []
trim_analysis = ["notify"]
class_mapping = ["notify"]

[[bin]]
name = "trim_analysis"
required-features = ["trim_analysis"]

[[bin]]
name = "class_mapping"
required-features = ["class_mapping"]

[[bench]]
name = "query_bench"
harness = false
