[package]
name = "cosmograph-egui"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tower = "0.5.2"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon.workspace = true
rand = "0.9.0"
parking_lot = "0.12.1"

# Add database crate dependency
arma3_database.workspace = true