[package]
name = "arma3-tool-dependency-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
arma3-tool-models = { path = "../models" }
arma3-tool-cache-storage = { path = "../cache_storage" }
dashmap = "6.1.0"
rayon = "1.10.0"
thiserror = "2.0.12"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] } 