[package]
name = "arma3-tool-dependency-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
arma3-tool-models = { path = "../models" }
arma3-tool-cache-storage = { path = "../cache_storage" }
dashmap.workspace = true
rayon.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true 