[package]
name = "arma3_tool_dependency_scanner"
version.workspace = true
edition.workspace = true

[dependencies]
arma3_tool_models = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true } 