[package]
name = "arma3_tool_pbo_cache"
version.workspace = true
edition.workspace = true
description = "PBO extraction and caching system for Arma 3 tools"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
pbo_tools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[features]
default = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
required-features = ["clap"]

[[example]]
name = "test_extraction"
path = "test_extraction.rs" 