[package]
name = "arma3-tool-report-writer"
version.workspace = true
edition.workspace = true

[dependencies]
arma3-tool-models = { path = "../models" }
arma3-tool-cache-storage = { path = "../cache_storage" }
arma3-tool-dependency-scanner = { path = "../dependency_scanner" }
thiserror.workspace = true
log.workspace = true
serde_json.workspace = true
chrono.workspace = true 
prettytable = "0.10.0"
