[package]
name = "arma3_tool_report_writer"
version.workspace = true
edition.workspace = true

[dependencies]
arma3_tool_shared_models = { workspace = true }
dashmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
prettytable-rs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }