[package]
name = "arma3_config"
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[dependencies]
arma3_extractor = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }