[package]
name = "parser_hpp"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# HEMTT dependencies - local development (comment these out to use remote)
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }

# HEMTT dependencies - remote git (uncomment these to use remote)
# hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
# hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
# hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
# hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }

serde = { workspace = true }
tempfile = { workspace = true }

# External dependencies not in workspace

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query_benchmarks"
harness = false