[package]
name = "arma3_reporter"
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[dependencies]
# Internal dependencies
arma3_database = { workspace = true }

# External dependencies
chrono = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }