[package]
name = "mission_scanner"
version.workspace = true
edition.workspace = true

[dependencies]
parser_sqm = { workspace = true }
parser_hpp = { workspace = true }
sqf-analyzer = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration_test.rs"
harness = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[bench]]
name = "mission_scanner_benchmarks"
harness = false
