[package]
name = "weapon_magazine_scanner"
version.workspace = true
edition.workspace = true

[dependencies]
# Local dependencies
parser_advanced = { workspace = true }
gamedata_scanner_models = { workspace = true }

# External dependencies
walkdir = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
crossbeam-channel = { workspace = true }

# Performance optimization dependencies
memchr = { workspace = true }
regex = { workspace = true }
bincode = { workspace = true }
lz4_flex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
