[package]
name = "arma3_workflow"
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[dependencies]
arma3_database = { workspace = true }
arma3_extractor = { workspace = true }
arma3_reporter = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
futures = "0.3"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }