[package]
name = "arma3-reporter"
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[dependencies]
# Internal dependencies
arma3-database = { workspace = true }
arma3-config = { workspace = true }
arma3-analyze = { workspace = true }

# External dependencies
chrono = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }