[package]
name = "arma3-scanner-tools"
version.workspace = true
edition.workspace = true

[[bin]]
name = "batch_check"
path = "src/bin/batch_check.rs"

[dependencies]
gamedata_scanner = { workspace = true }
gamedata_scanner_models = { workspace = true }
parser_hpp = { workspace = true }
hemtt-common = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }

# HEMTT dependencies - local development (comment these out to use remote)
# hemtt-common = { path = "../../HEMTT/libs/common" }

# HEMTT dependencies - remote git (uncomment these to use remote)
# hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"