[package]
name = "arma3-tools"
version.workspace = true
edition.workspace = true
authors = ["Your Name <you@example.com>"]

[dependencies]
clap = { workspace = true }
walkdir = { workspace = true }
pbo_tools = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
fs_extra = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
path-clean = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints.clippy]
enum_glob_use = "deny"
