[package]
name = "arma3-config"
version = "0.1.0"
edition = "2021"
authors = ["Tom Campbell <tyen901@gmail.com>"]

[dependencies]
arma3-types = { workspace = true }
arma3-errors = { workspace = true }
arma3-extract = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }