[package]
name = "arma3-pbo"
version.workspace = true
edition.workspace = true
description = "A Rust library for working with PBO (Packed Bundle Object) files"
authors = ["Tom Campbell <tyen901@gmail.com>"]
license = "MIT"

[lib]
name = "arma3-pbo"
path = "src/lib.rs"

[[bin]]
name = "arma3-pbo"
path = "src/bin/pbo_tools.rs"

[dependencies]
hemtt-pbo = { workspace = true }
hemtt-common = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"