[package]
name = "arma3-parser-hpp"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# HEMTT dependencies - local development (comment these out to use remote)
hemtt-config = { workspace = true }
hemtt-workspace = { workspace = true }
hemtt-preprocessor = { workspace = true }
hemtt-common = { workspace = true }

# HEMTT dependencies - remote git (uncomment these to use remote)
# hemtt-config = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
# hemtt-workspace = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
# hemtt-preprocessor = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }
# hemtt-common = { git = "https://github.com/tyen-customs-a3/HEMTT.git", rev = "9fb1caf76cbfd50da57cbbea19e3d498b35697de" }

# Additional dependencies from parser_advanced
arma3-types = { workspace = true }
arma3-parser-common = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies from parser_simple
regex = { workspace = true }

serde = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

# External dependencies not in workspace

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }

[[bench]]
name = "query_benchmarks"
harness = false